# postalcode

./: .coveragerc  CHANGELOG.md  LICENSE.md  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  postCreateCommand.sh
.github/workflows/: coverage.yml
src/postalcode/: __init__.py  abstract_postal_code.py  helper.py  uk_postal_code.py
src/postalcode/enums/: countries.py
tests/postalcode/: abstract_postal_code_test.py  enum_countries_test.py  helper_test.py  uk_postal_code_test.py
tests/postalcode/countries/: test_data_uk.txt
