[project]
name = "postalcode"
version = "0.0.1"
authors = [
  { name="Alexandre Tran" },
]
description = "Postal code validator"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Elgismarus/postalcode"
"Repository" = "https://github.com/Elgismarus/postalcode"
"Changelog" = "https://github.com/Elgismarus/postalcode/blob/main/CHANGELOG.md"
